Update code style to eliminate checkstyle warnings